--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
-h1 {
-  color: red;
+  .navbar wrapper {
+      position: relative;
+  }
+  #section1 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+  #section2 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+  #section3 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+  #section41 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+  #section42 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+
+.carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 100%;
+      margin: auto;
+      max-height: 500px;
+  }
+#maincar {
+  margin-top: -50px;
+  margin-left: -30px;
+  width: 1000px;
+
+}
+#imgcar {
+  max-width: 5px;
+
 }
