--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,7 @@
   #section1 {padding-top:15px;height:500px;color: #4a4a4a; background-color: #fff;}
   #section2 {padding-top:50px;height:200px;color: #4a4a4a; background-color: #fff;}
   #section3 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
-  #section41 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
-  #section42 {padding-top:50px;height:500px;color: #4a4a4a; background-color: #fff;}
+
 
 .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -20,6 +19,10 @@
 
 }
 
+#section2 {
+  padding-top: 50px;
+}
+
 .bio {
   text-align: center;
 }
@@ -27,3 +30,107 @@
 .thumbnail {
   display: inline-block;
 }
+
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700,300);
+@gray: #e3e3e3;
+@grayer: #c3c3c3;
+@black: #555;
+@white: #f7f7f7;
+
+.centered {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.bottom-line {
+  border-bottom: 2px solid @grayer;
+}
+
+::-webkit-resizer {
+  display: none;
+}
+#formdiv {
+  margin-left: 350px;
+  padding-top: 100px;
+   }
+
+body {
+  background-color: @gray;
+  color: @black;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
+  padding-top: 40px;
+}
+
+body * {
+  outline: none !important;
+}
+
+header h1 {
+  .uppercase;
+  .centered;
+  .bottom-line;
+  background-color: @white;
+  box-shadow: 0px 0px 100px rgba(0,0,0,0.05);
+  color: @black;
+  font-weight: 300;
+  width: 300px;
+  padding: 10px 0px 10px 0px;
+  letter-spacing: 4px;
+}
+
+section {
+  .centered;
+}
+
+.arrow-up {
+  .centered;
+  position: relative;
+  top: 1px;
+  width: 0;
+  height: 0;
+  margin-top: 10px;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid @white;
+}
+
+form#contact {
+  .centered;
+  .bottom-line;
+  width: 300px;
+  padding: 20px;
+  background-color: @white;
+}
+
+.form-control {
+  //.uppercase;
+  box-shadow: none;
+  border-radius: 0;
+  background-color: @white;
+  outline: none;
+  border: none;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+  //border-bottom: 1px solid @gray;
+}
+
+textarea#message {
+  min-height: 100px;
+  resize: vertical;
+  overflow: hidden;
+  border-bottom: 0px;
+}
+
+button#send {
+  .uppercase;
+  .bottom-line;
+  margin-top: 20px;
+  letter-spacing: 4px;
+}
+
